fixed gap in menu

--- a/project/styles/techc.css
+++ b/project/styles/techc.css
@@ -14,12 +14,14 @@ h3 {
 
 header {
     display: flex;
+    margin: 0;
 }
 
 nav {
     display: flex;
     padding: 1rem;
     flex-direction: column;
+       
 }
 
 
@@ -36,6 +38,7 @@ nav ul {
     left: 0;
     top: 6.5rem;
     width: 100%;
+    box-sizing: border-box;
 }
 
 nav ul li {
@@ -105,33 +108,38 @@ a:hover {
     width: 100%;
     height: auto;
 }
-#welcome-msg{
-    
-     background-color: hsl(187, 54%, 70%);
-     color: #001524;
+
+#welcome-msg {
+
+    background-color: hsl(187, 54%, 70%);
+    color: #001524;
     margin: 20px auto;
     padding: 20px;
     text-align: center;
-        
+
 }
-#devices section{
-    background-color:#89d2dc;
+
+#devices section {
+    background-color: #89d2dc;
     max-width: 50%;
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
     color: #001524;
 }
-#devices section>*{
+
+#devices section>* {
     padding: 0.5rem;
 }
-button{
+
+button {
     border-radius: 10px;
     padding: 10px;
     font-weight: 600;
     margin: 1rem;
 }
-footer>*{
+
+footer>* {
     margin: 0;
     padding: 10px;
 }
