--- a/project/styles/techcLarge.css
+++ b/project/styles/techcLarge.css
@@ -26,7 +26,7 @@
     }
 
     #welcome-msg {
-        position: absolute;
+        position:absolute;
         top: 0;
         background-color: rgb(0 0 0 / 0.65);
         color: antiquewhite;
@@ -36,10 +36,12 @@
     #devices {
         display: flex;
         flex-direction: row;
-        background-color: #89d2dc;
     }
-    #devices section{
-     
+
+    #devices section {
+        border-radius: 0px;
+        background-color: none;
+
         width: 100%;
 
     }
